<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hearthstone</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_activity_mazos">Collection</string>
    <string name="action_buscar">Search</string>
    <string name="action_filter">Filter by class</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="select_clase">Choose a class</string>
    <string name="title_activity_carta_personalizada">Custom Card</string>
    <string name="CustomPhoto_NewPhoto">Take Photo</string>
    <string name="CustomPhoto_RotatePhoto">Rotate</string>
    <string name="CustomPhoto_LoadPhoto">Load Photo</string>
    <string name="CustomPhoto_SaveImage">Save Image</string>
    <string name="CustomPhoto_Damage">Damage</string>
    <string name="CustomPhoto_Life">Life</string>
    <string name="CustomPhoto_Cost">Cost</string>
    <string name="CustomPhoto_Description">Description</string>
    <string name="CustomPhoto_Name">Name</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="DialogLoading_title">Loading dependencies</string>
    <string name="DialogLoading_description">Loading</string>
    <string name="title_activity_detalles_carta">DetallesCartaActivity</string>
    <string name="title_activity_nuevo_mazo">New Deck</string>
    <string name="title_activity_hero_selection">Arena</string>
    <string name="disconnected_title">Disconnected</string>
    <string name="disconnected_message">Connection lost. Application will be closed.</string>
    <string name="more_than_30">Decks cannot have more than 30 cards.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_eleccion_cartas_mazo">EleccionCartasMazoActivity</string>
    <string name="button_carta">Add cards</string>
    <string name="title_activity_activity_arena">Arena</string>
    <string name="hint_nombre_mazo">Name</string>
    <string name="title_activity_mazos_predefinidos">Premade Decks</string>
    <string name="title_activity_detalles_mazo">DetallesMazoActivity</string>
    <string name="title_activity_muestra_carta">MuestraCartaActivity</string>
    <string name="action_max_cards">Collection complete</string>
    <string name="Dialog_max_cards_title">Caution!</string>
    <string name="Dialog_max_cards_description">Do you want to set the number of cards to maximum?</string>
    <string name="action_min_cards">I have no cards</string>
    <string name="Dialog_min_cards_title">Caution!</string>
    <string name="Dialog_min_cards_description">Do you want to set the number of cards to minimum?</string>
    <string name="action_select_all">Show all cards</string>
    <string name="action_select_common">Show common cards</string>
    <string name="action_select_class">Show class card</string>
    <string name="Toast_no_cards_create">Decks with no cards cannot be created</string>
    <string name="Toast_no_cards_edit">Decks cannot be updated with zero cards</string>
    <string name="Toast_no_name_create">Decks with no name cannot be created</string>
    <string name="Toast_no_name_edit">Decks cannot be updated with empty name</string>
    <string name="Toast_delete_save">The deck did not save</string>
    <string name="Toast_been_deleted">has been deleted</string>
    <string name="Toast_been_updated">has been updated</string>
    <string name="Toast_been_created">created!</string>
    <string name="Toast_Photo">Image has been saved</string>





</resources>
