<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.diego.hearthstone.EleccionCartasMazoActivity">


    <item android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        android:icon="@mipmap/hearthstone_logo"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item android:id="@+id/action_select_class"
        android:title="@string/action_select_class"
        android:icon="@drawable/ic_action_filter"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item android:id="@+id/action_select_common"
        android:title="@string/action_select_common"
        android:icon="@drawable/ic_action_filter"
        app:showAsAction="ifRoom|collapseActionView"/>

</menu>
