<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:background="#ffffffff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/CustomPhoto_NewPhoto"
                    android:id="@+id/buttonNewPhoto"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:textColor="@color/ColorLetra"
                    android:background="@color/ColorButton"
                    android:layout_margin="5dp" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/CustomPhoto_RotatePhoto"
                    android:id="@+id/buttonRotate"
                    android:layout_weight="1"
                    android:textColor="@color/ColorLetra"
                    android:background="@color/ColorButton"
                    android:layout_margin="5dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/CustomPhoto_LoadPhoto"
                    android:id="@+id/buttonLoadPhoto"
                    android:layout_weight="1"
                    android:textColor="@color/ColorLetra"
                    android:background="@color/ColorButton"
                    android:layout_margin="5dp" />
            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/CustomPhoto_SaveImage"
                android:id="@+id/buttonSavePhoto"
                android:textColor="@color/ColorLetra"
                android:background="@color/ColorButton"
                android:layout_margin="5dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextName"
                android:hint="@string/CustomPhoto_Name"
                android:textColor="@color/ColorButton" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextDescription"
                android:hint="@string/CustomPhoto_Description"
                android:textColor="@color/ColorButton" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageID"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/CustomPhoto_Damage"
                        android:id="@+id/textViewDamage"
                        android:textColor="@color/ColorLetra" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerDamage"
                        android:spinnerMode="dropdown"
                        android:backgroundTint="@color/ColorFondo" />


                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/CustomPhoto_Life"
                        android:id="@+id/textViewLife"
                        android:textColor="@color/ColorLetra" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerLife"
                        android:spinnerMode="dropdown"
                        android:backgroundTint="@color/ColorFondo" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/CustomPhoto_Cost"
                        android:id="@+id/textViewCost"
                        android:textColor="@color/ColorLetra" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerCost"
                        android:spinnerMode="dropdown"
                        android:backgroundTint="@color/ColorFondo" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>